clusters/talos-pve/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - immich.k8s.exmaple.com
  rules:
    - host: immich.k8s.exmaple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
